--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ h1{
 
 .logo{
     /* Quand width est utilisé le paramètre height n'est souvent pas nécessaire car width change aussi la hauteur. */
+    margin-left: 5em;
     margin-right: 2em;
     width: 3em;
     border-radius: 50%;
@@ -47,24 +48,27 @@ h1{
 }
 
 .desktopMenu {
+    column-gap: 6em;
     background-color: darkolivegreen;
     position: fixed;
-    width: 100%;
+    width: 100vw;
+    display: flex;
+    align-items: center;
 /* Attention, font-size influence la taille de mon logo (à cause de l'attribut alt ?) */
 }
 
+
 .desktopMenu .desktopList {
-    display: flex ;
-    align-items: center;
+  align-self: flex-end;
+  width: 100%;
 }
 
 /*Pour agir sur un enfant de header, je préfère agir sur le nav que le div.
 Agir sur le div ne fonctionnerait pas par défaut. nav=plus facile*/
 /*On ne met pas de point car il n'y a pas d'appel de classe*/
 .desktopMenu .desktopList li {
-    display: inline;
-    margin-left: 20px; /* On utilisera gap si on veut que l'espace soit entre chaque élément,
-                        Ici, je préfère utiliser margin-left pour éloigner mon navbar du logo */
+    display: inline-flex;                 /* On utilisera gap si on veut que l'espace soit entre chaque élément*/
+ 
     text-shadow: 3px 3px 0px rgba(0,0,0,0.3) ;
 }
 
@@ -91,7 +95,7 @@ On ne mets pas de point devant pour l'appeler*/
     border-style: none;
     box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.5) ;;
     /* On mettra un border-radius de 50% (tout pour un cercle*/
-    border-radius: 10% 10% 10% 10% / 20% 20% 20% 20% ;
+    border-radius: 90% 90% 90% 90% / 10% 10% 10% 10% ;
     border-color: white;
     border-width: 1px;
     background: #b9ce7d;
@@ -114,7 +118,7 @@ On ne mets pas de point devant pour l'appeler*/
 }
 
 .mobileLogo {
-    width:1em;
+    width: 1em;
 }
 
 .mobileList {
@@ -140,10 +144,9 @@ On ne mets pas de point devant pour l'appeler*/
   /* Pour que le curseur soit un pointeur */
   cursor: pointer;
   background: darkolivegreen;
-  width: 100vw;
   /* forme influencée par la forme parente ? */
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   color: white;
   /* Pour que le menu hamburger s'affiche toujours */
   text-align: right;
@@ -181,7 +184,7 @@ On ne mets pas de point devant pour l'appeler*/
 body{
     /* On peut rajouter la valeur cover center au paramètre background*/
     /* On peut utiliser soit la paramètre background: ou background-repeat: ou background-machin */  
-    background-image: url("/resources/background.jpg");
+    background-image: url("resources/background.jpg");
     background-repeat: repeat;
     background-size : 1em;
     margin: 0 ; /* Nécessaire pour que la navbar et le menu ne flottent pas et soit collée au bord gauche */
@@ -272,7 +275,7 @@ main {
   margin-bottom: 1em;
   padding: 1em;
   
-  background-image: url("/resources/background.jpg") ;
+  background-image: url("resources/background.jpg") ;
   background-size: 20em;
   background-repeat: repeat;
   background-attachment: fixed; /* Crée l'effet de parallax */
@@ -290,7 +293,7 @@ main {
   margin-bottom: 1em;
   padding: 1em;
   
-  background-image: url("/resources/paralalala.jpg") ;
+  background-image: url("resources/paralalala.jpg") ;
   background-size: 20em;
   background-repeat: repeat;
   background-attachment: fixed;
@@ -338,14 +341,16 @@ input:is([type="text"], [type="email"], [type="number"], [type="tel"], [type="ur
   background-color: #9ea77c;
  }
 
+/* ----------------------------------------------------- TABLEAU ------------------------------------------------------------------------------------ */
 
-/* ------------------------------------------------- TABLEAUX BOITES ------------------------------------------------------------------------------------ */
+caption {
+  font-size: 60px;
+}
 
-.boxContainer {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr; /* Trois valeurs = trois colonnes */ /* 1fr = 150 px */
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr; /* L'unité fr (fractionnement) est responsive et spécifique au display:grid */
-    gap: 10px; /*Idem que margin, permet d'éviter de devoir choisir une direction (left ou right) */
+table {
+  margin:  0 auto ; /* s'applique sur l'objet-même. Permet de centrer un objet au centre de son conteneur parent. (Top et Bottom 0) (left et right rauto)*/
+  border-collapse: collapse ; /* Permet d'enlever l'écart entre les cellules et avoir un tableau
+                              Qui ressemble à un tableau*/
 }
 
 th {
@@ -360,14 +365,13 @@ td {
     text-align: center;
 }
 
-table {
-    margin:  0 auto ; /* s'applique sur l'objet-même. Permet de centrer un objet au centre de son conteneur parent. (Top et Bottom 0) (left et right rauto)*/
-    border-collapse: collapse ; /* Permet d'enlever l'écart entre les cellules et avoir un tableau
-                                Qui ressemble à un tableau*/
-}
+/* ************************************************************* Boîtes ****************************************************************************** */
 
-caption {
-    font-size: 60px;
+.boxContainer {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr; /* Trois valeurs = trois colonnes */ /* 1fr = 150 px */
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr; /* L'unité fr (fractionnement) est responsive et spécifique au display:grid */
+    gap: 10px; /*Idem que margin, permet d'éviter de devoir choisir une direction (left ou right) */
 }
 
 .boxAll {
@@ -375,15 +379,14 @@ caption {
     /* On peut aussi utiliser les déclarations grid-row: 1 / 4 (start et end) et grid-column: 1 / 3 */
     border: 1px solid #556b2f ;
     height: 100px; /* Cette boîte force une hauteur à la boîte, ce qui peut rentrer en conflit
-                    avec les valeurs indiqués dans .contaier {grid-template-column} */
+                    avec les valeurs indiqués dans .container {grid-template-column} */
 padding: 1em;
 }
-
 
 .box1 {
     grid-column: 1 / 5 ; /*Dans mon boxContainer, j'ai défini 5 colonnes, ma première colonne ira de l'arête de colonne 1 à la 5.*/
     grid-row: 1 / 2 ;
-    }
+}
 
 .box2 {
     grid-column: 1 / 3 ;
@@ -1002,7 +1005,7 @@ animation: dance-fire 3s infinite linear;
 /* On évite de configurer "en dur" la disparition d'élements (display:none) sur nos éléments .DesktopMenu et .mobileMenu dans le CSS normal, sinon le CSS du media query ne pourra pas overwrite ce paramètre.*/
 
 /* Pour les tablettes */
-@media screen and (max-width:800px) {
+@media screen and (max-width:1000px) {
     .desktopMenu {
         display: none;
     }
@@ -1022,7 +1025,7 @@ animation: dance-fire 3s infinite linear;
     }
 }
 
-@media screen and (min-width:800px) { /* Le min-width est plus difficile à appréhender */
+@media screen and (min-width:1000px) { /* Le min-width est plus difficile à appréhender */
 
     .mobileMenu {
         display: none;
